Wip: #63 Fix scrollbar

--- a/styles/src/input.css
+++ b/styles/src/input.css
@@ -22,3 +22,12 @@
 		src: url('../../fonts/Comic Sans MS/Comic Sans MS.ttf');
 	}
 }
+
+/*@layer utilities {
+  .scrollbar {
+    @apply scrollbar-thin scrollbar-thumb-gray-400 scrollbar-track-gray-200;
+  }
+  .dark .scrollbar {
+    @apply scrollbar-thumb-gray-600 scrollbar-track-gray-800;
+  }
+}*/
